fix: scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@
   --max-width: 1200px;
 }
 
-/* Light mode scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
   height: 15px;
@@ -24,31 +23,21 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  
-  /* background-color:#d8a884 ; */
+  background-color: #ccc;
   border-radius: 5px;
-  background-image: linear-gradient( #ffefbd , #d8a884 100%);
-
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  /* background-color:#d8a884 ; */
-  background-image: linear-gradient(#ffefbd , #d8a884 );
+  background-color: #ccc;
 }
 
-/* Dark mode scrollbar */
 .dark ::-webkit-scrollbar-thumb {
-  background-image: linear-gradient( #ffefbd, #d8a884 );
-
-  /* background-color:#d8a884 ; */
-  
+  background-color: #474747;
 }
 
 .dark ::-webkit-scrollbar-thumb:hover {
-  background-image: linear-gradient(#ffefbd, #d8a884);
-
-  /* background-color:#d8a884 ; */
-}
+  background-color: #474747;
+} 
 * {
   padding: 0;
   margin: 0;
